fixed z-index issue in linegraph widget

--- a/public/styles/widget.css
+++ b/public/styles/widget.css
@@ -148,6 +148,8 @@
 
 	transition: var(--widget-transition);
 	opacity: 0;
+
+	z-index: 10;
 }
 
 .widget-remove svg {
@@ -321,8 +323,6 @@
 
 	width: 100%;
 	height: 100%;
-
-	z-index: -1;
 }
 
 /* Widget Modal  */
